# tree-sitter-qmljs

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  package.yml
bindings/c/: tree-sitter-qmljs.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_qmljs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQmljs/: qmljs.h
examples/: Makefile  known-failures.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  scanner.c  typescript-scanner.h
