[package]
name = "tree-sitter-qmljs"
description = "QML grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "qml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/yuja/tree-sitter-qmljs"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.24.0"

[build-dependencies]
cc = "1.0.96"
